--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,8 +60,8 @@
     <!-- Create your account -->
 
     <!-- About -->
+    <div class="m-3">
     <h3>INICIO???</h3>
-    <div>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Platea dictumst quisque sagittis purus sit amet. Tempor nec feugiat nisl pretium fusce. Orci dapibus ultrices in iaculis nunc. Ultricies mi eget mauris pharetra et ultrices neque ornare aenean. Ornare lectus sit amet est placerat. Duis at consectetur lorem donec massa sapien. Sed elementum tempus egestas sed sed risus pretium quam. Sit amet luctus venenatis lectus. Neque aliquam vestibulum morbi blandit cursus risus at ultrices mi. Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque.
         </p>
