--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 </html>
 <body>
     <div class="the-container">
-        <div class="image"><a href="/"class="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Fate_Zero_logo.png" height="100px" width="100px" alt="Logo Falso"></a></div> <!--o logo em forma de imagem está dentro do link-->
+        <div class="image"><a href="/"class="logo"><img src="./images/squar-removebg.png" width="200px" alt="SQUAR"></a></div> <!--o logo em forma de imagem está dentro do link-->
         <main class="container">
             <form action="" method="POST"> <!-- Adicionado action="" e method="POST"-->
                 <div class="row2">
@@ -22,7 +22,7 @@
                                 <label for="password" class="form-label"><strong>Senha</strong></label>
                                 <input type="password" class="form-control" id="password" name="password"> <!-- Adicionei o name="password" para capturar esse dado no req.body -->
                             </div>
-                            <div class="buttom">
+                            <div class="d-flex justify-content-center">
                                 <button type="submit" class="btn btn-warning">Entrar</button>
                             </div>
                         </div>
