--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,10 @@
 <div class="the-container">
-    <a href="/" class="logo"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Fate_Zero_logo.png" height="100px" width="100px" alt="Logo Falso"></a>
+    <a href="/" class="logo"><img src="./images/squar-removebg.png" width="200px" alt="SQUAR"></a>
     <!--o logo em forma de imagem está dentro do link-->
 
     <!-- </div> -->
-    <div class="the-menu">
-        <nav class="menu">
+    <div class="the-menu d-flex align-items-center">
+        <nav class="menu d-flex align-items-center">
             <ul>
                 <li><a href="/">Início</a></li>
                 <li><a href="/about">Sobre</a></li>
