--- a/public/stylesheets/new-product.css
+++ b/public/stylesheets/new-product.css
@@ -43,6 +43,7 @@
     display: flex;
     flex-direction: row;
     justify-content: left;
+    align-items: center;
     /* align-items: left; */
     background-color: #F9E79F;
     padding-right: 20px;
@@ -66,8 +67,8 @@
 
 .container-product {
     display: flex;
-    max-width: 900px;
-    margin: 35px auto;
+    max-width: 1200px;
+    margin: 35px 0;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-start;
@@ -77,10 +78,13 @@
 }
 
 .item-product {
-    align-self: auto;
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: auto;
-    align-items: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
+.item-product img{
+    max-height: 125px;
+    max-width: 125px;
+}
