--- a/public/stylesheets/products.css
+++ b/public/stylesheets/products.css
@@ -43,12 +43,51 @@
     display: flex;
     flex-direction: row;
     justify-content: left;
+    align-items: center;
     /* align-items: left; */
     background-color: #F9E79F;
     padding-right: 20px;
     padding-left: 20px;
     }
 
-.product img{
-    max-width: 25%;
+.container-product {
+    display: flex;
+    max-width: 1200px;
+    margin: 35px 0;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: flex-start;
 }
+
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.product img{
+    max-height: 125px;
+    max-width: 125px;
+}
+
+.search-bar {
+    max-width: 600px;
+}
+
+@media only screen and (max-width: 700px){
+    .search-bar {
+        max-width: 300px;
+    }
+    .product img{
+        max-width: 60%;
+    }
+}
+
+.search-form {
+    display: flex;
+}
+
