--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,25 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/register.css">
+    <link rel="stylesheet" href="/stylesheets/login.css"/>
     <title>Cadastre-se</title>
 </head>
 <body>
-    <%- include('./partials/header') %>
-
-    <form action="" method="post">
-        <label for="nome" class="">Nome</label>
-        <input type="text" name="nome" id="nome">
-        <label for="email" class="">Email</label>
-        <input type="email" name="email" id="email">
-        <label for="password" class="">Senha</label>
-        <input type="password" name="password" id="password">
-        <label for="repeat-password" class="">Repetir senha</label>
-        <input type="password" name="repeat-password" id="repeat-password">
-        <div>
-            <button type="submit">Cadastrar</button>
-        </div>
-    </form>
+    <div class="the-container">
+        <div class="image"><a href="/"class="logo"><img src="./images/squar-removebg.png" width="200px" alt="SQUAR"></a></div> <!--o logo em forma de imagem está dentro do link-->
+        <main class="container">
+            <form action="" method="POST"> <!-- Adicionado action="" e method="POST"-->
+                <div class="row2">
+                    <div class="box card">
+                        <div class="mb-3">
+                            <h1 class="title">Crie sua conta e aproveite os produtos cadastrados disponíveis</h1>
+                        </div>
+                        <div class="mb-3">
+                            <div class="card-body">
+                                <label for="nome" class="form-label">Nome</label>
+                                <input type="text" class="form-control" name="nome" id="nome">
+                            </div>
+                            <div class="card-body">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control" name="email" id="email">
+                            </div>
+                            <div class="card-body">
+                                <label for="password" class="form-label">Senha</label>
+                                <input type="password" class="form-control" name="password" id="password">
+                            </div>
+                            <div class="card-body">
+                                <label for="password" class="form-label">Repetir a Senha</label>
+                                <input type="password" class="form-control" name="password" id="password">
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <button type="submit" class="btn btn-warning">Cadastrar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="mini-menu">
+                    <ul class="list">
+                        <li><a href="/">Puts, esqueci minha senha</a></li>
+                        <li>·</li>
+                        <li><a href="/register">Não possui cadastro?</a></li>
+                    </ul>
+                </div> -->
+                <!-- <div class="buttom">
+                    <button type="submit" class="btn btn-primary">Entrar</button>
+                </div> -->
+            </form>
+        </main>
+    </div>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
