adicionando CSS na pagina de detalhes

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,23 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= tempProduct.name %></title>
-</head>
-<body>
+
+
+  
+
+    <!DOCTYPE html>
+    <html>
     
-<h1>Detalhe do Produto: </h1>
-<div>
+    <head>
+        <title>Sobre - Squar</title>
+        <link rel="stylesheet" href="/stylesheets/details.css">
+    </head>
     
-    <div><%= tempProduct.name %></div> 
-    <div><%= tempProduct.type %></div> 
-    <div><%= tempProduct.price %></div> 
-    <img src="/images/uploads/<%= tempProduct.photo%>">
+    <body>
+        <%- include('./partials/header') %>
+          
+      
+        <div class="principal">
+            <div class="card mb-3" style="max-width: 600px;">
+                <div class="row g-0">
+                  <div class="col-md-3">
+                    <img src="/images/uploads/<%= tempProduct.photo%>">
+                  </div>
+                  <div class="col-md-9">
+                    <div class="card-body">
+                      <h5 class="card-title"><%= tempProduct.name %></h5>
+                      <p class="card-text">Tipo: <%= tempProduct.type %></p>
+                      <p class="card-text">
+                        <small class="text-muted">Preço: <%= tempProduct.price %></small>
+                        <a href="/products" class="btn btn-warning ms-2 ">Voltar</a>
+                        <a href="" class="btn btn-warning ms-2 " style="background-color: rgb(61, 252, 14); border-color: rgb(61, 252, 14) ;">Comprar</a>
+                        
+                     </p>
+                      
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
     
-</div>
+   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
     
 </body>
 </html>
+
