--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -20,14 +20,14 @@
 }
 
 .container h1 {
-    padding: 20px;
+    padding: 30px;
 }
 
 .row2 {
-    max-width: 45%;
+    max-width: 40%;
     border-bottom: 5px solid transparent;
-    margin-top: 100px;
-    margin-left: 230px;
+    margin-top: 80px;
+    margin-left: 215px;
 }
 
 .title {
@@ -58,5 +58,6 @@
     /* margin-left: 350px; */
 }
 .mini-menu ul {
-    margin-left: 265px;
+    margin-left: 323px;
+    border-bottom: 5px solid transparent;
 }
