--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,8 +30,8 @@
                 </div>
                 <div class="mini-menu">
                     <ul class="list">
-                        <li><a href="/">Puts, esqueci minha senha</a></li>
-                        <li>·</li>
+                        <!-- <li><a href="/">Puts, esqueci minha senha</a></li>
+                        <li>·</li> -->
                         <li><a href="/register">Não possui cadastro?</a></li>
                     </ul>
                 </div>
