--- a/views/register.ejs
+++ b/views/register.ejs
@@ -40,6 +40,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="mini-menu">
+                    <ul class="list">
+                        <!-- <li><a href="/">Puts, esqueci minha senha</a></li>
+                        <li>·</li> -->
+                        <li><a href="/login">Já possui cadastro?</a></li>
+                    </ul>
+                </div>
                 <!-- <div class="mini-menu">
                     <ul class="list">
                         <li><a href="/">Puts, esqueci minha senha</a></li>
