add header img fix

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <div class="the-container">
-    <a href="/" class="logo"><img src="./images/squar-removebg.png" width="200px" alt="SQUAR"></a>
+    <a href="/" class="logo"><img src="/images/squar-removebg.png" width="200px" alt="SQUAR"></a>
     <!--o logo em forma de imagem está dentro do link-->
 
     <!-- </div> -->
