fix in edit product render

--- a/views/newProduct.ejs
+++ b/views/newProduct.ejs
@@ -59,6 +59,10 @@
                         </div>
                     </div>
                     <div class="mb-3">
+                        <label for="description" class="">Descrição*</label>
+                        <input name="description" id="description" type="text" class="form-control">
+                    </div>
+                    <div class="mb-3">
                         <label for="photo">Foto do produto: </label>
                         <input type="file" class="btn" name="photo">
                     </div>
