--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,8 +31,8 @@
                                 <input type="password" class="form-control" name="password" id="password">
                             </div>
                             <div class="card-body">
-                                <label for="password" class="form-label">Repetir a Senha</label>
-                                <input type="password" class="form-control" name="password" id="password">
+                                <label for="password-repeat" class="form-label">Repetir a Senha</label>
+                                <input type="password" class="form-control" name="password-repeat" id="password-repeat">
                             </div>
                             <div class="d-flex justify-content-center">
                                 <button type="submit" class="btn btn-warning">Cadastrar</button>
